cambie un texto de lista

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="menudesk">  
             <ul>
                 <li>
-                <a href="./maquinaria/maquinaria.html">maquinaria</a>
+                <a href="./maquinaria/maquinaria.html">HOLA JUANCARLOS COMO ESTAS</a>
                 </li>
                 <li>
                 <a href="./nuestra empresa/nuestraempresa.html">nuestra empresa</a>
