commit con todos los archivos perri

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>wes fumigaciones</title>
     <link rel="stylesheet" href="assets/css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
@@ -12,14 +15,14 @@
 <body>
     <header>
         <div><img src="./assets/imagenes/LOGO.png" alt="width 80px" height="80px"></div>
-        <p> <h2> ni un bicho en tu casa</h2></p>
+        <p class="headtitle">ni un bicho en tu casa</p>
         <div class="containerbutton">
         <span class="myButton">menu</span>
         </div>
         <nav class="menudesk">  
             <ul>
                 <li>
-                <a href="./maquinaria/maquinaria.html">HOLA JUANCARLOS COMO ESTAS</a>
+                <a href="./maquinaria/maquinaria.html">maquinaria</a>
                 </li>
                 <li>
                 <a href="./nuestra empresa/nuestraempresa.html">nuestra empresa</a>
