cambios de detalles de estilos(colores etc)

--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="colorletrasfooter">
         <section>
             <div class="colorfooter">
                 <h3 class="mifooty">Contactanos</h3>
-                    <div class="estilosfooterpapi">
-                        <span>4294-0805</span>
-                        <span>11-039-456</span>
-                        <span>instagram</span> 
-                        <span>facebook</span>
-                    </div>
-                    <div class="estilosfooterpapiimagenes">
-                        <i class="fa fa-phone"></i>
-                        <i class="fa fa-whatsap"></i>
-                        <i class="fa fa-instagram"></i>
-                        <i class="fa fa-facebook"></i>
-                    </div>
+                <div class="estilosfooterpapi">
+                    <span>4294-0805</span>
+                    <span>11-039-456</span>
+                    <span>instagram</span> 
+                    <span>facebook</span>
+                </div>
+                <div class="estilosfooterpapiimagenes">
+                    <div class="fa fa-phone"></div>
+                    <div class="fa-brands fa-whatsapp"></div>
+                    <div class="fa fa-instagram"></div>
+                    <div class="fa fa-facebook"></div>
+                </div>
             </div>
         </section>
     </footer>
