cambios en estilos pedido por tutorIA

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
     <header>
         <div><img src="./assets/imagenes/LOGO.png" alt="width 80px" height="80px"></div>
-        <p class="headtitle">ni un bicho en tu casa</p>
-        <div class="containerbutton">
-        <span class="myButton">menu</span>
+        <h2 class="headtitle">ni un bicho en tu casa</h2>
         </div>
         <nav class="menudesk">  
             <ul>
@@ -25,7 +23,7 @@
                 <a href="./maquinaria/maquinaria.html">maquinaria</a>
                 </li>
                 <li>
-                <a href="./nuestra empresa/nuestraempresa.html">nuestra empresa</a>
+                <a href="./nuestraempresa/nuestraempresa.html">nuestra empresa</a>
                 </li>
                 <li>
                 <a href="./productos/productos.html">productios</a>
@@ -45,7 +43,18 @@
         <div>
             <h3>conocenos un poco mas</h3>
             <article>
-                <p class="textofundacional">Texto fundacional de toda una corriente dramática, el Teatro de la Crueldad, de la que son deudores desde dramaturgos tan internacionales como Fernando Arrabal hasta grupos tan innovadores como La Fura dels Baus. Artaud, retomando diversas líneas de teatro folklórico y de mitos de diversas culturas, y alejándose de la tradición helénica, propone un teatro completamente inusual en su tiempo basado en el gesto y en la necesidad de impresionar al espectador mediante la estimulación de los sentidos. Destacando el movimiento, la acción, la gestualidad y la voz por encima de la historia de carácter narrativo, Artaud pretende llevar hasta sus últimas consecuencias la capacidad de crear una reacción física del espectáculo teatral. Aun cuando en su tiempo sus teorías fueron objeto de duras controversias y ácidas críticas, con el tiempo se han ido aceptando muchos de sus planteamientos (a menudo reformulados y matizados) hasta convertirse en un referente fundamental de la teoría dramática contemporánea.</p>
+                <p class="textofundacional">Texto fundacional de toda una corriente dramática, el Teatro de la Crueldad, de la que son deudores desde dramaturgos tan internacionales
+                    como Fernando Arrabal hasta grupos tan innovadores como La Fura dels Baus. Artaud, retomando diversas líneas de teatro folklórico y de mitos de diversas culturas
+                    y alejándose de la tradición helénica, propone un teatro completamente inusual en su tiempo basado en el gesto y en la necesidad de impresionar al espectador med
+                    iante la estimulación de los sentidos. Destacando el movimiento, la acción, la gestualidad y la voz por encima de la historia de carácter narrativo, Artaud preten
+                    de llevar hasta sus últimas consecuencias la capacidad de crear una reacción física del espectáculo teatral. Aun cuando en su tiempo sus teorías fueron objeto de d
+                    uras controversias y ácidas críticas, con el tiempo se han ido aceptando muchos de sus planteamientos (a menudo reformulados y matizados) hasta convertirse en un r
+                    eferente fundamental de la teoría dramática contemporánea.
+                </p>
+                <p class="textofundacionalii">Texto fundacional de toda una corriente dramática, el Teatro de la Crueldad, de la que son deudores desde dramaturgos tan internacionales
+                    como Fernando Arrabal hasta grupos tan innovadores como La Fura dels Baus. Artaud, retomando diversas líneas de teatro folklórico y de mitos de diversas culturas
+                    y alejándose de la tradición helénica, propone un teatro completamente inusual en su tiempo basado en el gesto y en la necesidad 
+                </p>
                 <img class="fotosdeconocenos" src="./assets/imagenes/jefa.jpg" alt="foto de la dueña">
                 <img class="fotosdeconocenos" src="./assets/imagenes/equipo tecnico.jpg" alt="foto de los operadores">
             </article>
