--- a/maquinaria/maquinaria.html
+++ b/maquinaria/maquinaria.html
@@ -3,10 +3,18 @@
 <head>
     <title>wes fumigaciones</title>
     <link rel="stylesheet" href="../assets/css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body>
+<body class="colormaq">
     <header>
-<div><h1>maquinaria</h1></div>
+<div><h1 class="pagetitle">maquinaria</h1></div>
 <a href="../index.html"><h4>pagina principal</h4></a>
 <nav>
     <ul>
@@ -14,7 +22,7 @@
             <a href="../maquinaria/maquinaria.html">maquinaria</a>
         </li>
         <li>
-        <a href="../nuestra empresa/nuestraempresa.html">nuestra empresa</a>
+        <a href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a>
         </li>
         <li>
             <a href="../productos/productos.html">productios</a>
