--- a/nuestra empresa/nuestraempresa.html
+++ b/nuestra empresa/nuestraempresa.html
@@ -3,10 +3,18 @@
 <head>
     <title>wes fumigaciones</title>
     <link rel="stylesheet" href="../assets/css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head> 
 <body class="nuestraempresa">
     <header class="">
-<div><h1>nuestra empresa</h1></div>
+<div><h1 class="pagetitle">nuestra empresa</h1></div>
 <a href="../index.html"><h4>pagina principal</h4></a>
 <nav>
     <ul>
@@ -14,7 +22,7 @@
             <a href="../maquinaria/maquinaria.html">maquinaria</a>
         </li>
         <li>
-            <a href="../nuestra empresa/nuestraempresa.html">nuestra empresa</a>
+            <a href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a>
         </li>
         <li>
             <a href="../productos/productos.html">productios</a>
@@ -26,10 +34,11 @@
 </nav>
 </header>
 <div id="wrapper">
-    <section id="titulo" class="">
-        <img src="../assets/imagenes/LOGO.png" height="100px" width="100px"> <br> Wes fumigaciones</br>
+    <section id="titulo">
+        <img src="../assets/imagenes/LOGO.png" height="100px" width="100px"> <h3> Wes fumigaciones</h3>
     </section>
     <section id="descripcionDueña" class="">
+        <p>
         ¡Mi triste corazón babea a popa,
         mi corazón que colma el caporal
         y me vierten en él chorros de sopa,
@@ -56,13 +65,17 @@
         yo, el del corazón despedazado.
         Cuando se agoten sus chimós gargálicos
         ¿cómo vivir, oh corazón robado?
+    </p>
     </section>
 
+    
+
     <section id="subtitulo" class="">
-        nuestra mision
+        <h3>nuestra mision</h3>
     </section>
 
     <section id="descripcionNuestramision">
+        <p>
         Emigra de la muerte
         para hacer un signo de Vida nuevamente en Ti
         fiero y bello como un accidente de autos
@@ -80,6 +93,7 @@
         ¡Tu indiferencia! ¡Mi entusiasmo!
         ¡Yo insisto! ¡Tú toses!
         Perdido en la Ola de- Oro que flota
+    </p>
     </section>
     <article id="dueña" class="">
         <img src="../assets/imagenes/jefa.jpg" height="150px" width="150px" alt="">
