--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <div>
             <h3>conocenos un poco mas</h3>
             <article>
-                <p class="textofundacional">Texto fundacional de toda una corriente dramática, el Teatro de la Crueldad, de la que son deudores desde dramaturgos tan internacionales
-                    como Fernando Arrabal hasta grupos tan innovadores como La Fura dels Baus. Artaud, retomando diversas líneas de teatro folklórico y de mitos de diversas culturas
-                    y alejándose de la tradición helénica, propone un teatro completamente inusual en su tiempo basado en el gesto y en la necesidad de impresionar al espectador med
-                    iante la estimulación de los sentidos. Destacando el movimiento, la acción, la gestualidad y la voz por encima de la historia de carácter narrativo, Artaud preten
-                    de llevar hasta sus últimas consecuencias la capacidad de crear una reacción física del espectáculo teatral. Aun cuando en su tiempo sus teorías fueron objeto de d
-                    uras controversias y ácidas críticas, con el tiempo se han ido aceptando muchos de sus planteamientos (a menudo reformulados y matizados) hasta convertirse en un r
-                    eferente fundamental de la teoría dramática contemporánea.
+                <p class="textofundacional">
+                    WES FUMIGACIONES fue creada en 1993; su Titular Johana Djetzerniak, está ligada a la actividad de Saneamiento Ambiental desde 1989, participando de otras empresas de similares características.
+                    Basados en la premisa de jerarquizar la actividad, el objetivo que perseguimos es la eficiencia, seguridad, calidad técnica y atención personalizada de cada prestación.
+                    Somos una empresa en crecimiento con rumbo claro y consecuente con nuestros principios fundacionales.
+                    Intentamos brindarle un servicio rápido, eficiente y con el precio acorde a su presupuesto.
+                    Buscamos que nos elija como su proveedor habitual y de entera confianza..."
+                    "Lo invitamos a que conozca quienes somos..."
                 </p>
                 <p class="textofundacionalii">Texto fundacional de toda una corriente dramática, el Teatro de la Crueldad, de la que son deudores desde dramaturgos tan internacionales
                     como Fernando Arrabal hasta grupos tan innovadores como La Fura dels Baus. Artaud, retomando diversas líneas de teatro folklórico y de mitos de diversas culturas
