--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                     Buscamos que nos elija como su proveedor habitual y de entera confianza..."
                     "Lo invitamos a que conozca quienes somos..."
                 </p>
-                <p class="textofundacionalii">Texto fundacional de toda una corriente dramática, el Teatro de la Crueldad, de la que son deudores desde dramaturgos tan internacionales
-                    como Fernando Arrabal hasta grupos tan innovadores como La Fura dels Baus. Artaud, retomando diversas líneas de teatro folklórico y de mitos de diversas culturas
-                    y alejándose de la tradición helénica, propone un teatro completamente inusual en su tiempo basado en el gesto y en la necesidad 
-                </p>
+                <p class="textofundacionalii">"Deseamos poner en su conocimiento las operatorias y servicios que estamos en condiciones de poder ofrecerle.
+                    SUR FUMIGACIONES fue creada en 1993; su Titular Hugo Higuera, está ligado a la actividad de Saneamiento Ambiental desde 1989, participando de otras empresas de similares características.
+                    Basados en la premisa de jerarquizar la actividad, el objetivo que perseguimos es la mata
+                    "Lo invitamos a que conozca quienes somos..."</p>
                 <img class="fotosdeconocenos" src="./assets/imagenes/jefa.jpg" alt="foto de la dueña">
                 <img class="fotosdeconocenos" src="./assets/imagenes/equipo tecnico.jpg" alt="foto de los operadores">
             </article>
