--- a/nuestraempresa/nuestraempresa.html
+++ b/nuestraempresa/nuestraempresa.html
@@ -38,33 +38,13 @@
         <img src="../assets/imagenes/LOGO.png" height="100px" width="100px"> <h3> Wes fumigaciones</h3>
     </section>
     <section id="descripcionDueña" class="">
-        <p>
-        ¡Mi triste corazón babea a popa,
-        mi corazón que colma el caporal
-        y me vierten en él chorros de sopa,
-        mi triste corazón babea a popa:
-        con las bromas sangrientas de la tropa
-        que brama un carcajeo general,
-        mi triste corazón babea a popa,
-        mi corazón que colma el caporal!
-        
-        Itiofálicos y soldadinescos
-        sus chistes sangrientos lo han depravado;
-        y de noche componen unos frescos
-        itiofálicos y soldadinescos.
-        ¡Oleajes abracadabrantescos
-        llevadme el corazón, que sea lavado!
-        Itiofálicos y soldadinescos
-        sus chistes sangrientos lo han depravado.
-        
-        Cuando se agoten sus chimós gargálicos
-        ¿cómo vivir, oh corazón robado?
-        llegarán con sus estribillos báquicos;
-        cuando se agoten sus chimós gargálicos
-        sentiré sobresaltos estomáquicos,
-        yo, el del corazón despedazado.
-        Cuando se agoten sus chimós gargálicos
-        ¿cómo vivir, oh corazón robado?
+        <p>"Deseamos poner en su conocimiento las operatorias y servicios que estamos en condiciones de poder ofrecerle.
+            SUR FUMIGACIONES fue creada en 1993; su Titular Hugo Higuera, está ligado a la actividad de Saneamiento Ambiental desde 1989, participando de otras empresas de similares características.
+            Basados en la premisa de jerarquizar la actividad, el objetivo que perseguimos es la eficiencia, seguridad, calidad técnica y atención personalizada de cada prestación.
+            Somos una empresa en crecimiento con rumbo claro y consecuente con nuestros principios fundacionales.
+            Intentamos brindarle un servicio rápido, eficiente y con el precio acorde a su presupuesto.
+            Buscamos que nos elija como su proveedor habitual y de entera confianza..."
+            "Lo invitamos a que conozca quienes somos..."  
     </p>
     </section>
 
